agent wallet swagger updated
